[gd_scene load_steps=4 format=3 uid="uid://07ll1ilr34ww"]

[ext_resource type="Script" path="res://scripts/entities/components/ProjectileComponent.gd" id="1_qjmiy"]
[ext_resource type="Texture2D" uid="uid://btj5ovxqlvkly" path="res://Assets/Sprites/Items/Equipment/Projectile/Bullet/bullet.png" id="2_6tj4n"]
[ext_resource type="Script" path="res://scripts/weapons/attack.gd" id="3_b8208"]

[node name="Bullet" type="Node2D"]
scale = Vector2(4, 4)

[node name="ProjectileComponent" type="Node2D" parent="." node_paths=PackedStringArray("hurtbox", "sprite", "projectile_attack")]
script = ExtResource("1_qjmiy")
hurtbox = NodePath("Area2D/CollisionPolygon2D")
sprite = NodePath("Sprite2D")
speed = 1500
projectile_attack = NodePath("../Attack")

[node name="Area2D" type="Area2D" parent="ProjectileComponent"]
z_index = 7
collision_layer = 0
collision_mask = 40

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ProjectileComponent/Area2D"]
polygon = PackedVector2Array(-8, 1, -8, 0, -5, -1, -1, -2, 6, -2, 8, 0, 8, 1, 6, 3, -1, 3)

[node name="Sprite2D" type="Sprite2D" parent="ProjectileComponent"]
texture = ExtResource("2_6tj4n")

[node name="Attack" type="Node" parent="."]
script = ExtResource("3_b8208")
damage = 10
knockback = 10

[connection signal="area_entered" from="ProjectileComponent/Area2D" to="ProjectileComponent" method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="ProjectileComponent/Area2D" to="ProjectileComponent" method="_on_area_2d_body_entered"]
